feat: added small styling

--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,2 +1,5 @@
-<p>home works!</p>
-<img class="img-responsive" src="https://cdn.discordapp.com/attachments/1313686143971364955/1313686158596898857/571AF31F6C67ACB93EFB5720C22031DC32C1195C.png?ex=675c3dd3&is=675aec53&hm=147f0ccbd210023728270f3cf2bbb955bb9335672dce0bc98d18c70142ccfbed&">
+<div class="flex justify-center items-center">
+  <img src="https://cdn.discordapp.com/attachments/1313686143971364955/1313686158596898857/571AF31F6C67ACB93EFB5720C22031DC32C1195C.png?ex=675c3dd3&is=675aec53&hm=147f0ccbd210023728270f3cf2bbb955bb9335672dce0bc98d18c70142ccfbed&"
+       alt="dog.">
+</div>
+
