feat: set up routing and all of the pages I need, now to spruce them up

--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,5 +1,1 @@
-<div class="flex justify-center items-center">
-  <img src="assets/images/pumpkin_gimli.png"
-       class="object-scale-down h-100 w-96" alt="dog.">
-</div>
-
+<div>Include picture of myself, with a blurb of who I am and what my goals are</div>
