feat: added some extra styling to the nav bar

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<app-nav-bar></app-nav-bar>
-<main class="main">
+<main class="main min-h-screen bg-[#121212] text-white">
+  <app-nav-bar></app-nav-bar>
   <router-outlet />
 </main>
