--- a/src/app/components/nav-bar/nav-bar.component.html
+++ b/src/app/components/nav-bar/nav-bar.component.html
@@ -1,15 +1,20 @@
 <nav class="bg-white border-gray-200 dark:bg-gray-900">
-    <div class="max-w-screen-xl flex flex-wrap items-center justify-between mx-auto p-4">
-      <a href="#" class="flex items-center space-x-3 rtl:space-x-reverse">
-          <img src="https://www.svgrepo.com/show/492550/happy.svg" class="h-8" alt="Just a lil guy" />
-          <span class="self-center text-2xl font-semibold whitespace-nowrap dark:text-white">You Should Hire Ryan!</span>
-      </a>
-      <div id="navbar-default">
-        <ul class="font-medium flex flex-col p-4 md:p-0 mt-4 border border-gray-100 rounded-lg bg-gray-50 md:flex-row md:space-x-8 rtl:space-x-reverse md:mt-0 md:border-0 md:bg-white dark:bg-gray-800 md:dark:bg-gray-900 dark:border-gray-700">
-          <li *ngFor="let option of options">
-            <a href="{{option}}" class="block py-2 px-3 text-white bg-blue-700 rounded md:bg-transparent md:text-blue-700 md:p-0 dark:text-white md:dark:text-blue-500" aria-current="page">{{option}}</a>
-          </li>
-        </ul>
-      </div>
+  <div class="max-w-screen-xl flex flex-wrap items-center justify-between mx-auto p-4">
+    <a href="#" class="flex items-center space-x-3 rtl:space-x-reverse">
+        <img src="https://www.svgrepo.com/show/492550/happy.svg" class="h-8" alt="Just a lil guy" />
+        <span class="self-center text-2xl font-semibold whitespace-nowrap dark:text-white">You Should Hire Ryan!</span>
+    </a>
+    <div id="navbar-default">
+      <ul class="font-medium flex flex-col p-4 md:p-0 mt-4 border border-gray-100 rounded-lg bg-gray-50 md:flex-row md:space-x-8 rtl:space-x-reverse md:mt-0 md:border-0 md:bg-white dark:bg-gray-800 md:dark:bg-gray-900 dark:border-gray-700">
+        <li *ngFor="let option of options">
+          <a href="{{option}}"
+             [ngClass]="option === currentUrl ? 'md:dark:text-yellow-400' : 'md:dark:text-gray-300'"
+             class="block py-2 px-3 bg-blue-700 rounded md:bg-transparent md:text-blue-700 md:p-0 dark:text-white hover:underline first-letter:capitalize"
+             aria-current="page">
+            {{option}}
+          </a>
+        </li>
+      </ul>
     </div>
-  </nav>
+  </div>
+</nav>
