feat: some style changes and set up a space for my practice work

--- a/src/app/components/pages/resume/resume.component.html
+++ b/src/app/components/pages/resume/resume.component.html
@@ -9,7 +9,7 @@
           class="object-cover w-full"
         />
       </div>
-      <h2 class="mt-4 text-xl font-semibold text-gray-200">Resume (Updated December 2024)</h2>
+      <h2 class="mt-4 text-xl font-bold text-gray-100">Resume (Updated December 2024)</h2>
     </div>
 
     <div>
@@ -18,11 +18,11 @@
         <li class="flex items-start">
           <img
             src="assets/images/studentuniverse_logo.png"
-            alt="Java Logo"
-            class="w-10 h-10 mr-4 object-cover"
+            alt="StudentUniverse Logo"
+            class="w-10 h-10 mr-4"
           />
           <div>
-            <h3 class="text-lg font-medium text-gray-300">StudentUniverse</h3>
+            <h3 class="text-lg text-gray-100">StudentUniverse</h3>
             <p class="text-gray-400">
               Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
             </p>
@@ -31,11 +31,11 @@
         <li class="flex items-start">
           <img
             src="assets/images/globalspec_logo.png"
-            alt="Java Logo"
-            class="w-10 h-10 mr-4 object-cover"
+            alt="GlobalSpec Logo"
+            class="w-10 h-10 mr-4"
           />
           <div>
-            <h3 class="text-lg font-medium text-gray-300">GlobalSpec</h3>
+            <h3 class="text-lg text-gray-100">GlobalSpec</h3>
             <p class="text-gray-400">
               Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
             </p>
@@ -45,10 +45,10 @@
           <img
             src="assets/images/abiomed_logo.png"
             alt="Java Logo"
-            class="w-10 h-10 mr-4 object-cover"
+            class="w-10 h-10 mr-4"
           />
           <div>
-            <h3 class="text-lg font-medium text-gray-300">Abiomed</h3>
+            <h3 class="text-lg text-gray-100">Abiomed</h3>
             <p class="text-gray-400">
               Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
             </p>
