--- a/src/app/components/pages/dog/dog.component.html
+++ b/src/app/components/pages/dog/dog.component.html
@@ -1,17 +1,13 @@
 <div class="container mx-auto px-6 py-12">
-  <header class="text-center mb-12">
-    <h1 class="text-4xl font-bold text-gray-100">My Boy!</h1>
-  </header>
-
-  <section class="mb-12">
-    <h2 class="text-3xl font-semibold text-gray-100 mb-4">About Gimli</h2>
+  <div class="mb-12">
+    <h2 class="text-3xl font-bold text-gray-100 mb-4">About Gimli</h2>
     <p class="text-gray-400 leading-relaxed">
       Dog dog dog dog dog dog dog dog dog, dog dogdog dog dog dog.
     </p>
-  </section>
+  </div>
 
-  <section>
-    <h2 class="text-3xl font-semibold text-gray-100 mb-6">Gallery</h2>
+  <div>
+    <h2 class="text-3xl font-bold text-gray-100 mb-6">Gallery</h2>
     <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 gap-6">
       <div class="overflow-hidden rounded-lg shadow-lg">
         <img
@@ -35,5 +31,5 @@
         />
       </div>
     </div>
-  </section>
+  </div>
 </div>
