--- a/src/app/components/shared/http-tester/http-tester.component.html
+++ b/src/app/components/shared/http-tester/http-tester.component.html
@@ -1,34 +1,73 @@
-<div class="max-w-lg mx-auto p-4 bg-gray-800 rounded-lg">
-  <h2 class="text-2xl text-white mb-4">Form</h2>
-  <form (ngSubmit)="onSubmit()">
-    <div class="mb-4">
-      <label for="id" class="block text-white dark:text-gray-100">ID:</label>
-      <input
-        type="number"
-        id="id"
-        [(ngModel)]="formData.id"
-        name="id"
-        required
-        class="w-full p-2 border border-gray-600 rounded-md text-white bg-gray-700"
-      />
-    </div>
-    <div class="mb-4">
-      <label for="name" class="block text-white dark:text-gray-100">Value:</label>
-      <input
-        type="text"
-        id="name"
-        [(ngModel)]="formData.value"
-        name="name"
-        required
-        class="w-full p-2 border border-gray-600 rounded-md text-white bg-gray-700"
-      />
-    </div>
+<div class="flex">
+  <div class="flex-auto w-32">
+    <div class="max-w-lg mx-auto p-4 bg-gray-800 rounded-lg">
+      <h2 class="text-2xl text-white mb-4">Form</h2>
+      <form (ngSubmit)="onSubmit()">
+        <div class="mb-4">
+          <label for="id" class="block text-white dark:text-gray-100">ID:</label>
+          <input
+            type="number"
+            id="id"
+            [(ngModel)]="formData.id"
+            name="id"
+            required
+            class="w-full p-2 border border-gray-600 rounded-md text-white bg-gray-700"
+          />
+        </div>
+        <div class="mb-4">
+          <label for="name" class="block text-white dark:text-gray-100">Value:</label>
+          <input
+            type="text"
+            id="name"
+            [(ngModel)]="formData.value"
+            name="name"
+            required
+            class="w-full p-2 border border-gray-600 rounded-md text-white bg-gray-700"
+          />
+        </div>
 
+        <button
+          type="submit"
+          class="w-full bg-blue-500 text-white p-2 rounded-md hover:bg-blue-600"
+        >
+          Submit
+        </button>
+      </form>
+    </div>
+  </div>
+  <div class="flex-auto w-64">
     <button
+      (click)="pullDatabaseTests()"
       type="submit"
       class="w-full bg-blue-500 text-white p-2 rounded-md hover:bg-blue-600"
     >
-      Submit
+      Pull Data
     </button>
-  </form>
+    <div class="container mx-auto p-4">
+      <h2 class="text-lg font-bold mb-4">Database Tests</h2>
+      databaseTests.size - {{databaseTests.length}}
+      <table class="table-auto w-full border-collapse border border-gray-400">
+        <thead>
+        <tr>
+          <th class="border px-4 py-2">ID</th>
+          <th class="border px-4 py-2">Value</th>
+          <th class="border px-4 py-2">Date Created</th>
+          <th class="border px-4 py-2">Date Updated</th>
+        </tr>
+        </thead>
+        <tbody>
+        <tr *ngFor="let test of databaseTests">
+          <td class="border px-4 py-2">{{ test.id }}</td>
+          <td class="border px-4 py-2">{{ test.value }}</td>
+          <td class="border px-4 py-2">
+            {{ test.dateCreated | date: 'shortDate' }}
+          </td>
+          <td class="border px-4 py-2">
+            {{ test.dateUpdated | date: 'shortDate' }}
+          </td>
+        </tr>
+        </tbody>
+      </table>
+    </div>
+  </div>
 </div>
