--- a/src/app/components/shared/http-tester/http-tester.component.html
+++ b/src/app/components/shared/http-tester/http-tester.component.html
@@ -1,8 +1,16 @@
 <div class="flex">
-  <div class="flex-auto w-32">
+  <div class="flex-auto w-32 pt-6">
     <div class="max-w-lg mx-auto p-4 bg-gray-800 rounded-lg">
-      <h2 class="text-2xl text-white mb-4">Form</h2>
-      <form (ngSubmit)="onSubmit()">
+      <div class="flex justify-between">
+        <h2 class="text-2xl text-white mb-4">Form</h2>
+        <button
+          (click)="resetForm()"
+          type="submit"
+          class="bg-gray-500 text-white p-2 rounded-md hover:bg-red-600">
+          Reset
+        </button>
+      </div>
+      <form (ngSubmit)="openSubmitModal()">
         <div class="mb-4">
           <label for="id" class="block text-white dark:text-gray-100">ID:</label>
           <input
@@ -36,16 +44,8 @@
     </div>
   </div>
   <div class="flex-auto w-64">
-    <button
-      (click)="pullDatabaseTests()"
-      type="submit"
-      class="w-full bg-blue-500 text-white p-2 rounded-md hover:bg-blue-600"
-    >
-      Pull Data
-    </button>
     <div class="container mx-auto p-4">
-      <h2 class="text-lg font-bold mb-4">Database Tests</h2>
-      databaseTests.size - {{databaseTests.length}}
+      <h2 class="text-lg font-bold mb-4">Database Tests (Click on an ID to copy)</h2>
       <table class="table-auto w-full border-collapse border border-gray-400">
         <thead>
         <tr>
@@ -53,11 +53,12 @@
           <th class="border px-4 py-2">Value</th>
           <th class="border px-4 py-2">Date Created</th>
           <th class="border px-4 py-2">Date Updated</th>
+          <th class="border px-4 py-2"></th>
         </tr>
         </thead>
         <tbody>
         <tr *ngFor="let test of databaseTests">
-          <td class="border px-4 py-2">{{ test.id }}</td>
+          <td class="border px-4 py-2 hover:underline" (click)="copyToForm(test.id, test.value)">{{ test.id }}</td>
           <td class="border px-4 py-2">{{ test.value }}</td>
           <td class="border px-4 py-2">
             {{ test.dateCreated | date: 'shortDate' }}
@@ -65,9 +66,19 @@
           <td class="border px-4 py-2">
             {{ test.dateUpdated | date: 'shortDate' }}
           </td>
+          <td class="border px-4 py-2">
+            <button
+              (click)="openDeleteModal(test.id)"
+              type="submit"
+              class="w-full bg-gray-500 text-white p-2 rounded-md hover:bg-red-600">
+              Delete
+            </button>
+          </td>
         </tr>
         </tbody>
       </table>
     </div>
   </div>
 </div>
+<p-toast />
+<p-confirmdialog />
