--- a/src/app/components/shared/http-tester/http-tester.component.html
+++ b/src/app/components/shared/http-tester/http-tester.component.html
@@ -1,3 +1,4 @@
+<div>HTTP Tester Cookie - {{tastyCookie}}</div>
 <div class="flex">
   <div class="flex-auto w-32 pt-6">
     <div class="max-w-lg mx-auto p-4 bg-gray-800 rounded-lg">
