--- a/src/app/components/shared/http-tester/http-tester.component.html
+++ b/src/app/components/shared/http-tester/http-tester.component.html
@@ -1,85 +1,90 @@
-<div>HTTP Tester Cookie - {{tastyCookie}}</div>
-<div class="flex">
-  <div class="flex-auto w-32 pt-6">
-    <div class="max-w-lg mx-auto p-4 bg-gray-800 rounded-lg">
-      <div class="flex justify-between">
-        <h2 class="text-2xl text-white mb-4">Form</h2>
-        <button
-          (click)="resetForm()"
-          type="submit"
-          class="bg-gray-500 text-white p-2 rounded-md hover:bg-red-600">
-          Reset
-        </button>
-      </div>
-      <form (ngSubmit)="openSubmitModal()">
-        <div class="mb-4">
-          <label for="id" class="block text-white dark:text-gray-100">ID:</label>
-          <input
-            type="number"
-            id="id"
-            [(ngModel)]="formData.id"
-            name="id"
-            required
-            class="w-full p-2 border border-gray-600 rounded-md text-white bg-gray-700"
-          />
-        </div>
-        <div class="mb-4">
-          <label for="name" class="block text-white dark:text-gray-100">Note:</label>
-          <input
-            type="text"
-            id="name"
-            [(ngModel)]="formData.note"
-            name="name"
-            required
-            class="w-full p-2 border border-gray-600 rounded-md text-white bg-gray-700"
-          />
-        </div>
+<div class="container mx-auto px-6 py-12">
+  <div class="mb-12">
+    <div class="text-gray-400">
+      <div class="pb-6">This started out as a quick thing to test my connection with my spring backend.  Basically I am generating a uuid and storing it as a cookie to act as a unique key, so its all one table but with personal ids associated with each cookie.</div>
+      <div class="pb-6">Originally it didn't use cookies and just let everyone have access and whoops welp didn't really think that one through.  You can't update IDs you don't know the cookie for so don't try.  I'll know.</div>
+    </div>
 
-        <button
-          type="submit"
-          class="w-full bg-blue-500 text-white p-2 rounded-md hover:bg-blue-600"
-        >
-          Submit
-        </button>
-      </form>
+    <div class="max-w-lg mx-auto p-4">HTTP Tester Cookie - {{tastyCookie}}</div>
+  </div>
+
+  <div class="flex">
+    <div class="flex-auto w-32 pt-6">
+      <div class="max-w-lg mx-auto p-4 bg-gray-800 rounded-lg">
+        <div class="flex justify-between">
+          <h2 class="text-2xl text-white mb-4">
+            <span *ngIf="currentState === 'creating'">Creating a new note</span>
+            <span *ngIf="currentState === 'editing'">Editing ID {{formData.id}}</span>
+          </h2>
+          <button
+            (click)="resetForm()"
+            type="submit"
+            class="bg-gray-500 text-white p-2 rounded-md hover:bg-red-600">
+            Reset
+          </button>
+        </div>
+        <form (ngSubmit)="openSubmitModal()">
+          <div class="mb-4">
+            <label for="name" class="block text-white dark:text-gray-100">Note:</label>
+            <input
+              type="text"
+              id="name"
+              [(ngModel)]="formData.note"
+              name="name"
+              required
+              class="w-full p-2 border border-gray-600 rounded-md text-white bg-gray-700"
+            />
+          </div>
+
+          <button
+            type="submit"
+            class="w-full bg-blue-500 text-white p-2 rounded-md hover:bg-blue-600"
+          >
+            Submit
+          </button>
+        </form>
+      </div>
+    </div>
+    <div class="flex-auto w-64">
+      <div class="container mx-auto p-4">
+        <h2 class="text-lg font-bold mb-4">Database Tests (Click on an ID to copy)</h2>
+        <table class="table-auto w-full border-collapse border border-gray-400">
+          <thead>
+          <tr>
+            <th class="border px-4 py-2">ID</th>
+            <th class="border px-4 py-2">Note</th>
+            <th class="border px-4 py-2">Date Created</th>
+            <th class="border px-4 py-2">Date Updated</th>
+            <th class="border px-4 py-2"></th>
+          </tr>
+          </thead>
+          <tbody>
+          <tr *ngFor="let test of databaseTests">
+            <td class="border px-4 py-2 hover:underline" (click)="copyToForm(test.personalId, test.note)">{{ test.personalId }}</td>
+            <td class="border px-4 py-2">{{ test.note }}</td>
+            <td class="border px-4 py-2">
+              {{ test.dateCreated | date: 'shortDate' }}
+            </td>
+            <td class="border px-4 py-2">
+              {{ test.dateUpdated | date: 'shortDate' }}
+            </td>
+            <td class="border px-4 py-2">
+              <button
+                (click)="openDeleteModal(test.personalId)"
+                type="submit"
+                class="w-full bg-gray-500 text-white p-2 rounded-md hover:bg-red-600">
+                Delete
+              </button>
+            </td>
+          </tr>
+          </tbody>
+        </table>
+      </div>
     </div>
   </div>
-  <div class="flex-auto w-64">
-    <div class="container mx-auto p-4">
-      <h2 class="text-lg font-bold mb-4">Database Tests (Click on an ID to copy)</h2>
-      <table class="table-auto w-full border-collapse border border-gray-400">
-        <thead>
-        <tr>
-          <th class="border px-4 py-2">ID</th>
-          <th class="border px-4 py-2">Note</th>
-          <th class="border px-4 py-2">Date Created</th>
-          <th class="border px-4 py-2">Date Updated</th>
-          <th class="border px-4 py-2"></th>
-        </tr>
-        </thead>
-        <tbody>
-        <tr *ngFor="let test of databaseTests">
-          <td class="border px-4 py-2 hover:underline" (click)="copyToForm(test.id, test.note)">{{ test.id }}</td>
-          <td class="border px-4 py-2">{{ test.note }}</td>
-          <td class="border px-4 py-2">
-            {{ test.dateCreated | date: 'shortDate' }}
-          </td>
-          <td class="border px-4 py-2">
-            {{ test.dateUpdated | date: 'shortDate' }}
-          </td>
-          <td class="border px-4 py-2">
-            <button
-              (click)="openDeleteModal(test.id)"
-              type="submit"
-              class="w-full bg-gray-500 text-white p-2 rounded-md hover:bg-red-600">
-              Delete
-            </button>
-          </td>
-        </tr>
-        </tbody>
-      </table>
-    </div>
-  </div>
+  <p-toast />
+  <p-confirmdialog />
 </div>
-<p-toast />
-<p-confirmdialog />
+
+
+
