feat: removed the placeholder text, simplified css, implemented image gallery component

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<main class="main min-h-screen bg-[#121212] text-white">
+<main class="main text-gray-400 bg-[#121212]">
   <app-nav-bar></app-nav-bar>
   <router-outlet />
 </main>
