--- a/src/app/components/pages/home/home.component.html
+++ b/src/app/components/pages/home/home.component.html
@@ -2,14 +2,14 @@
   <div class="mx-auto">
     <div class="text-center mb-12">
       <h1 class="text-4xl font-bold text-gray-100">Ryan Morrissey</h1>
-      <p class="text-gray-400 mt-2">Fullstack Software Engineer</p>
+      <p class="mt-2">Fullstack Software Engineer</p>
     </div>
 
     <div class="grid grid-cols-1 md:grid-cols-2 gap-8 items-center">
       <div class="flex justify-center">
-        <div class="rounded-full overflow-hidden border-4 border-gray-600">
+        <div class="overflow-hidden border-4 border-gray-600">
           <img
-            src="assets/images/dog.png"
+            src="assets/images/me.jpg"
             alt="My Picture"
             class="object-cover w-full h-full"
           />
@@ -18,16 +18,19 @@
 
       <div>
         <h2 class="text-2xl font-bold text-gray-100 mb-4">Who am I?</h2>
-        <p class="text-gray-400">
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+        <p>
+          Hello! I am a software developer living near Albany, New York. I graduated from Rochester Institute of Technology in 2019 and have been working as a full-stack developer since 2020.
         </p>
         <h2 class="text-2xl font-bold text-gray-100 mt-6 mb-4">What is this site?</h2>
-        <p class="text-gray-400">
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+        <p class="mb-4">
+          When I started to look for work again, the idea of this site came to mind. I knew the concepts of building something from scratch as well as how to deploy it, but all of my professional work has been on things that had already been established.
+        </p>
+        <p>
+          I find the best way to truly understand how something works is to do it from start to finish.  While visual design is not really a strength of mine, I figure I can still put something together to explain who I am.  I only had a few set goals on how I wanted to deploy it.  Built with an Angular 19 frontend, a Spring backend, and a Postgres database that is all deployed in AWS.
         </p>
         <h2 class="text-2xl font-bold text-gray-100 mt-6 mb-4">My goals?</h2>
-        <p class="text-gray-400">
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+        <p>
+          To find a new home to continue my growth as a developer!  I love Software Development from the bottom of my heart and want to get back to it as soon as I can.
         </p>
       </div>
     </div>
