--- a/src/app/components/pages/resume/resume.component.html
+++ b/src/app/components/pages/resume/resume.component.html
@@ -23,8 +23,14 @@
           />
           <div>
             <h3 class="text-lg text-gray-100">StudentUniverse</h3>
-            <p class="text-gray-400">
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+            <p class="mb-4">
+              StudentUniverse is a travel company which primarily markets toward active students.  By partnering with different airlines, they are able to offer student-centric discounts and programs.
+            </p>
+            <p class="mb-4">
+              For the tech-stack, my time was split relatively evenly between javascript development with AngularJS and groovy development with Spring.  My work focused on checkout flow improvements, hotel offerings, and developing internal tools for our travel agents.
+            </p>
+            <p>
+              Unfortunately in August 2024, myself along with a majority of the developers were let go after a company merge.
             </p>
           </div>
         </li>
@@ -36,8 +42,11 @@
           />
           <div>
             <h3 class="text-lg text-gray-100">GlobalSpec</h3>
-            <p class="text-gray-400">
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+            <p class="mb-4">
+              GlobalSpec is a company that offers a search engine with an expansive engineering catalog.  From product specifications and datasheets, to where to source and purchase them.  Due to the sheer amount of data available, their focus is on optimization.
+            </p>
+            <p>
+              The majority of my work was done in ColdFusion and Spring, with some Angular development.  As my first job out of college, I was given the unique opportunity to shuffle around the different specialized development teams to see what fit me best, which led to my love of full stack development.
             </p>
           </div>
         </li>
@@ -49,8 +58,11 @@
           />
           <div>
             <h3 class="text-lg text-gray-100">Abiomed</h3>
-            <p class="text-gray-400">
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+            <p class="mb-4">
+              Abiomed is a med-tech company in Danvers, MA that focuses on heart recovery technology.  In particular, I was a member of the cloud team which developed support software for their heart pumps.  With our site, medical professionals could have constant access to the status of any Abiomed devices associated with them.
+            </p>
+            <p>
+              As my first experience with professional work as a part of my college's co-op program, my year with Abiomed was more of a support role.  Working with Angular and .net core, I mostly assisted with bug fixes and QA testing.
             </p>
           </div>
         </li>
