--- a/src/app/components/pages/resume/resume.component.html
+++ b/src/app/components/pages/resume/resume.component.html
@@ -1,17 +1,30 @@
-<div class="container mx-auto p-6 md:p-10">
-  <div class="grid grid-cols-1 md:grid-cols-2 gap-6">
+<div class="flex w-full h-screen">
+  <div class="w-3/5 p-4">
+    <!--I can disable everything at once but cant enable them ):-->
+    <ngx-extended-pdf-viewer
+      [src]="'/assets/pdfs/resume.pdf'"
+      [height]="'auto'"
+      [showDrawEditor]="false"
+      [showFindButton]="false"
+      [showSidebarButton]="false"
+      [textLayer]="true"
+      pageViewMode="single"
+      [showFirstAndLastPageButtons]="false"
+      [showHandToolButton]="false"
+      [showRotateButton]="false"
+      [showTextEditor]="false"
+      [showOpenFileButton]="false"
+      [showFindHighlightAll]="false"
+      [showHighlightEditor]="false"
+      [showPageLabel]="false"
+      [showPageNumber]="false"
+      [showPagingButtons]="false"
+      [filenameForDownload]="'Ryan Morrissey - Resume.pdf'"
+      [zoom]="'page-width'">
+    </ngx-extended-pdf-viewer>
+  </div>
 
-    <div class="flex flex-col items-center justify-center bg-gray-800 rounded-lg p-4 shadow-lg">
-      <div class="w-full max-w-md h-auto rounded-lg overflow-hidden border-4 border-gray-600 shadow-md">
-        <img
-          src="assets/images/resume.png"
-          alt="Resume Picture"
-          class="object-cover w-full"
-        />
-      </div>
-      <h2 class="mt-4 text-xl font-bold text-gray-100">Resume (Updated December 2024)</h2>
-    </div>
-
+  <div class="w-2/5 p-4">
     <div>
       <h2 class="text-2xl font-bold text-gray-100 mb-4">Work Experience</h2>
       <ul class="space-y-6">
@@ -59,7 +72,7 @@
           <div>
             <h3 class="text-lg text-gray-100">Abiomed</h3>
             <p class="mb-4">
-              Abiomed is a med-tech company in Danvers, MA that focuses on heart recovery technology.  In particular, I was a member of the cloud team which developed support software for their heart pumps.  With our site, medical professionals could have constant access to the status of any Abiomed devices associated with them.
+              Abiomed is a med-tech company that focuses on heart recovery technology.  In particular, I was a member of the cloud team which developed support software for their heart pumps.  With our site, medical professionals could have constant access to the status of any Abiomed devices associated with them.
             </p>
             <p>
               As my first experience with professional work as a part of my college's co-op program, my year with Abiomed was more of a support role.  Working with Angular and .net core, I mostly assisted with bug fixes and QA testing.
@@ -68,6 +81,5 @@
         </li>
       </ul>
     </div>
-
   </div>
 </div>
