--- a/src/app/components/shared/http-tester/http-tester.component.html
+++ b/src/app/components/shared/http-tester/http-tester.component.html
@@ -1,11 +1,12 @@
 <div class="container mx-auto px-6 py-12">
   <div class="mb-12">
-    <div class="text-gray-400">
+    <div class="">
       <div class="pb-6">This started out as a quick thing to test my connection with my spring backend.  Basically I am generating a uuid and storing it as a cookie to act as a unique key, so its all one table but with personal ids associated with each cookie.</div>
       <div class="pb-6">Originally it didn't use cookies and just let everyone have access and whoops welp didn't really think that one through.  You can't update IDs you don't know the cookie for so don't try.  I'll know.</div>
+      <div class="pb-6">If it doesn't connect, sorry.  For some reason my EC2 linux instance shuts off at night and it's also extremely expensive comparatively to the client deployment.  One postgres DB with one table, EC2 instance and a load balancer costs $1-2 a day which is just crazy, so I might shut it off.  I have the experience of setting it up now at least so im happy with that but i'll try to keep it up as much as I can.  Please check out the server code if you are interested.</div>
     </div>
 
-    <div class="max-w-lg mx-auto p-4">HTTP Tester Cookie - {{tastyCookie}}</div>
+    <div class="max-w-lg mx-auto p-4 text-white">HTTP Tester Cookie - {{tastyCookie}}</div>
   </div>
 
   <div class="flex">
@@ -25,7 +26,7 @@
         </div>
         <form (ngSubmit)="openSubmitModal()">
           <div class="mb-4">
-            <label for="name" class="block text-white dark:text-gray-100">Note:</label>
+            <label for="name" class="block text-white">Note:</label>
             <input
               type="text"
               id="name"
@@ -47,7 +48,7 @@
     </div>
     <div class="flex-auto w-64">
       <div class="container mx-auto p-4">
-        <h2 class="text-lg font-bold mb-4">Database Tests (Click on an ID to copy)</h2>
+        <h2 class="text-lg font-bold mb-4 text-white">Database Tests (Click on an ID to copy)</h2>
         <table class="table-auto w-full border-collapse border border-gray-400">
           <thead>
           <tr>
